deploy/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sitegen
  namespace: sitegen
  labels:
    app: sitegen
spec:
  selector:
    app: sitegen
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
